refactoring of the project

--- a/details.html
+++ b/details.html
@@ -16,18 +16,16 @@
   <header class="navbar">
     <div class="logo">
         <a class="link-blog" href="index.html">
+            <img id="logo-image" src="src/img/logomarca.svg" alt="Blog">
             <span class="title-blog">BLOG</span>
-                <p>
-                    <img id="logo-image" src="src/img/logomarca.svg" alt="Blog">
-                </p>
         </a>
     </div>
-  </header>
+</header>
   <main>
     <!-------------- back button -------------->
     <button class="arrow-background"><a href="index.html"> 
       <img class="back-button" src="src/img/ArrowIcon.png" alt="back">
-    </a></button></div>
+    </a></button>
 
     <!-------------- structuring of cards on the post details's page -------------->
     <section>     
